--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ITH Pós Graduação</title>
+    <meta name="description" content="Mais reconhecimento, mais oportunidades e maior crescimento pessoal e profissional! Somos um Instituto de Educação que transforma sua vida profissional">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <meta name="google-site-verification" content="kzZBM-xPlEyM0rtxqrtc6YMfLL09pMygYfzbBz4eoCE" />
+    <meta name="keywords" content="EAD, cursos online, online, cursos, matrícula, bolsa de estudos, bolsa, pós graduação na área da saúde, formação acadêmica, especialização, pós-graduado">
   </head>
   <body>
     <script>
